@@ -142,6 +142,19 @@ unset GNUSTEP_USER_DOCUMENTATION
 unset GNUSTEP_USER_DOCUMENTATION_MAN
 unset GNUSTEP_USER_DOCUMENTATION_INFO
 
+# These should not defined, but might be if something goes wrong
+# somewhere.
+unset GNUSTEP_USER_DIR_APPS 
+unset GNUSTEP_USER_DIR_TOOLS 
+unset GNUSTEP_USER_DIR_LIBRARY
+unset GNUSTEP_USER_DIR_HEADERS 
+unset GNUSTEP_USER_DIR_LIBRARIES 
+unset GNUSTEP_USER_DIR_RESOURCES 
+unset GNUSTEP_USER_DIR_JAVA 
+unset GNUSTEP_USER_DIR_DOCUMENTATION 
+unset GNUSTEP_USER_DIR_DOCUMENTATION_MAN
+unset GNUSTEP_USER_DIR_DOCUMENTATION_INFO
+
 unset GNUSTEP_PATHLIST
 unset GNUSTEP_USER_ROOT
 unset GNUSTEP_HOST_OS
